Added OAuth and created index.html for login
